fix: fix too long label length

--- a/src/components/form-field-base/form-field-base.module.scss
+++ b/src/components/form-field-base/form-field-base.module.scss
@@ -7,6 +7,7 @@
 }
 
 .form-field-base__label {
+  align-self: flex-start;
   margin-bottom: 10px;
   font-size: 16px;
   line-height: 22px;
